--- a/notesFunction/styles/styles.css
+++ b/notesFunction/styles/styles.css
@@ -1,3 +1,11 @@
+body{
+    width: 100%;
+    height:100%;
+}
+#mainbody{
+    width: 100%;
+    height:100%;
+}
 .popUp {
     display: none; 
     position: fixed; 
@@ -29,4 +37,11 @@
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+#addNoots {
+    margin-top:10px;
+    padding:10px;
+    background-color: #dfdfdf;
+    width:100%;
 }
