--- a/mobile web app/css/style.css
+++ b/mobile web app/css/style.css
@@ -44,9 +44,17 @@
 }
 #notes{
     background-color: #f8f3c3;
+}
 
+#attendanceBody{
+    background-color: #008000;
+}
+
+#attop{
+    background-color: #004d00;
 
 }
+
 .menu{
     padding-top: 70px;
     padding-left: 10px;
@@ -188,6 +196,13 @@ nav span {
     margin: 15px;
     border-radius: 25px;
 
+
+}
+#four{
+    background-color: #008000;
+    padding: 15px;
+    margin: 15px;
+    border-radius: 25px;
 
 }
 
@@ -481,4 +496,39 @@ input[type=checkbox]:checked + label{
 #rggmenu h5{
     text-align: center;
     font-size: 30px;
+}
+
+.popUp {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    display: none;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    padding-top: 100px;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#popCont {
+    width: 80%;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    background-color: #fefefe;
+}
+
+#close {
+    float: right;
+    color: #aaaaaa;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#close:hover, #close:focus {
+    cursor: pointer;
+    text-decoration: none;
+    color: #000;
 }
