--- a/mobile web app/css/style.css
+++ b/mobile web app/css/style.css
@@ -57,12 +57,6 @@
 
 .menu{
     padding-top: 70px;
-    padding-left: 10px;
-    
-    top: 0px;
-    left: 0px;
-    right: 0px;
-
 }
 
 #mainmenu p{
@@ -531,4 +525,116 @@ input[type=checkbox]:checked + label{
     cursor: pointer;
     text-decoration: none;
     color: #000;
+}
+
+#attendance{
+    padding-top: 0px;
+}
+
+input[value=Delete] {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    padding: 6px;
+    cursor: pointer;
+    text-transform: uppercase;
+    color: #fff;
+    border: 0px;
+    border-radius: 25px 25px 25px 25px;
+    outline: none;
+    background: rgba(181, 43, 43, 0.89);
+    box-shadow: none;
+    font-size: 10px;
+    font-weight: 400;
+}
+
+input[value=Delete] svg {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 30px;
+    height: 30px;
+    margin: 0 5px 5px 0;
+    padding: 0;
+}
+
+input[value=Delete] svg .fill {
+    transition: 0.2s ease;
+    fill: #9d9d9d;
+}
+
+input[value=Delete] svg:hover .fill {
+    fill: #c0392b;
+}
+
+.note {
+   position: relative;
+    float: left;
+    width: 100%;
+    min-height: 50px;
+    margin: 0 0 10px 0;
+    padding: 14px;
+    color: #444;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 22px;
+}
+
+.note h3 {
+    color: #000;
+    font-size: 20px;
+}
+
+.note h4 {
+    padding-bottom: 10px;
+    color: #585858;
+}
+
+.note h4::before {
+    content: 'Class: ';
+}
+
+#dispRemNotes h2{
+    margin-top: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    color: rgba(29, 29, 29, 0.35);
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+}
+
+#dispRemNotes{
+    width: 90%;
+}
+
+@media (min-width:801px) {
+    .note {
+        min-width: 300px;
+        max-width: 300px;
+        min-height: 200px;
+        max-height: 400px;
+        margin: 0 8px 8px 0;
+        color: #444;
+        border-radius: 5px;
+        background: #fff;
+        box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 22px;
+    }
+    .container {
+        float: none;
+        width: 100%;
+    }
+    .flexcontainer {
+        display: -webkit-flex;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        -webkit-flex-direction: row;
+        justify-content: center;
+    }
 }
